--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="register_a_click">Register a click</string>
     <string name="toggle_image">Toggle Image</string>
     <string name="reset">Reset</string>
+    <string name="dog">Dog</string>
 </resources>
