--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Assignment1</string>
+    <string name="app_name">Assignment1 Demo</string>
     <string name="no_clicks_yet">No Clicks Yet</string>
     <string name="register_a_click">Register a click</string>
     <string name="toggle_image">Toggle Image</string>
